# galton-board

./: .gitignore  Dockerfile  Makefile.am  README.md  autosetup.sh  configure.ac  main.cpp
src/: BoardDrawingArea.cpp  BoardDrawingArea.h  GaltonBoardWindow.cpp  GaltonBoardWindow.h  helloworld.cpp  helloworld.h
src/model/: Ball.cpp  Ball.h  CreditManager.cpp  CreditManager.h  PlayTracker.cpp  PlayTracker.h
